# notes_api

./: .env_example  .gitignore  Dockerfile  README.md  alembic.ini  compose.yml  pyproject.toml
src/: main.py
src/app/: admin.py
src/app/api/dependencies/: auth_deps.py  deps.py  logging_middleware.py
src/app/api/routes/: admin.py  auth.py  notes.py
src/app/core/: config.py  logging_config.py  logging_middleware.py  security.py
src/app/db/: __init__.py  base.py  models.py  session.py
src/app/db/migrations/: env.py
src/app/db/migrations/versions/: 9c6be4a0821b_initial_migration.py
src/app/schemas/: auth.py  auth_schemas.py  note_schemas.py
src/app/tests/: conftest.py  test_admin.py  test_auth.py  test_logging.py  test_notes.py
